# DSA

./: try.txt
AVL_tree/: p_avl_tree.c  p_avl_tree.h  p_main.c  p_queue.c  p_queue.h
AVL_tree/AVL_tree/: CMakeLists.txt  main.c
AVL_tree/AVL_tree/headers/: avl_tree.h  queue.h
AVL_tree/AVL_tree/source/: avl_tree.c  queue.c
dequeue/: p_deque.c  p_deque.h  p_main_deque.c
linked_list/: ll  main.c
queue/: p_main_queue.c  p_queue.c  p_queue.h
sort/: p_sort.h
stack/: p_stack.c  p_stack.h  p_stack_main.c
tree/: p_main_tree.c  p_queue.c  p_queue.h  p_tree_bst.c  p_tree_bst.h
